# SQUIRE

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
scripts/: pbs_example.sh  slurm_example.sh
src/squire/: cli.py  hdf5store.py  io.py  main.py  outputs.py  reports.py  sorting.py  squire_exceptions.py  stats.py  sync_version.py  types.py
